# equitylens

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: cli.py  main.py
backend/app/api/: routes.py  schemas.py
backend/app/core/: config.py  db.py
backend/app/ingestion/: edgar.py  prices.py  universe.py  xbrl.py
backend/app/llm/: client.py  prompts.py
backend/app/models/: __init__.py  company.py  filing.py  market.py  research.py
backend/app/rag/: chunking.py  embeddings.py  parsing.py  retrieval.py
backend/app/services/: companies.py  ingestion.py  rag.py  report.py
backend/tests/: conftest.py  test_chunking.py  test_edgar.py  test_embeddings.py  test_parsing.py  test_prompts.py  test_report.py  test_xbrl.py
backend/tests/eval/: golden_questions.json
backend/tests/fixtures/: companyfacts_sample.json  submissions_sample.json
docs/: architecture.md  data-quality.md  rag-design.md
docs/decisions/: 0001-modular-monolith.md  0002-pgvector-over-dedicated-vector-store.md  0003-handwritten-initial-migration.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/company/[ticker]/: page.tsx
frontend/app/company/[ticker]/chat/: page.tsx
frontend/components/: Chat.tsx  FundamentalsChart.tsx  PriceChart.tsx  ReportView.tsx  ScreenerTable.tsx
frontend/lib/: api.ts
(+1 files in other folders)
