[project]
name = "equitylens-backend"
version = "0.1.0"
description = "API and data ingestion for EquityLens, an AI investment research platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "pgvector>=0.3",
    "yfinance>=0.2.40",
    "tenacity>=9.0",
    "anthropic>=0.40",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
